kqed/src/objects/Job_Application__c.object
<CustomObject>
    <description>This includes the Job Application details such as resume, application information and review status etc.</description>
    <fields>
        <fullName>Average_Rating__c</fullName>
        <formula>IF(((Number_Of_Reviews__c &gt; 0) &amp;&amp; (Total_Rating__c &gt; 0)) , Total_Rating__c / Number_Of_Reviews__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bi_Weekly_Salary__c</fullName>
        <formula>Final_Salary__c /26</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bi-Weekly Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Candidate_Details__c</fullName>
        <formula>Hyperlink(&apos;/apex/Candidate?cand=&apos; &amp; Candidate__c ,  Candidate__r.Name , &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <inlineHelpText>HR and Sys Admin view of Candidate.</inlineHelpText>
        <label>Candidate</label>
        <referenceTo>candidate__c</referenceTo>
        <relationshipLabel>Job Applications</relationshipLabel>
        <relationshipName>R00ND0000001pXIZMA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cover_Letter__c</fullName>
        <label>Cover Letter</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_To_Applicant__c</fullName>
        <label>Email To Applicant</label>
        <picklist>
            <controllingField>Picklist__c</controllingField>
            <picklistValues>
                <fullName>Full Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejection</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Final_Salary__c</fullName>
        <inlineHelpText>Final salary after negotiation.</inlineHelpText>
        <label>Final Salary</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_Of_Reviews__c</fullName>
        <label>Number Of Reviews</label>
        <summaryForeignKey>Review__c.Job_Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Review Resume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Screen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule Interviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extend an Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Position_Details__c</fullName>
        <formula>HYPERLINK(Position__c, Text( Position__r.Title__c) &amp;&quot;, &quot; &amp;Text(  Position__r.Functional_Area__c )  ,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Position Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Job Applications</relationshipLabel>
        <relationshipName>Job_Applications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <picklist>
            <controllingField>Picklist__c</controllingField>
            <picklistValues>
                <fullName>Not best qualified - Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not best qualified - Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compensation expectations out of range</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of geographic location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lacks appropriate work authorization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No response from applicant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applicant previously applied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Position closed or inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Position filled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applicant not interested in position</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applicant accepted another position</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resume__c</fullName>
        <label>Resume</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Rating__c</fullName>
        <inlineHelpText>The candidates are rated and the combined total average is shown here.  If there were three interviews and each rated the applicant a 3 then the average would be a 3.</inlineHelpText>
        <label>Total Average Rating</label>
        <summarizedField>Review__c.Rating__c</summarizedField>
        <summaryForeignKey>Review__c.Job_Application__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Work_Schedule__c</fullName>
        <label>Work Schedule</label>
        <picklist>
            <picklistValues>
                <fullName>FT_5_08</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>FT_4_10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT_FLEX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT_1_04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT_3_10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT_FREE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT_4_06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT_3_05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT_3_08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT_4_08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT_1_08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT_2_08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT_1_06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT_5_03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT_5_04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT_3_07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT_5_07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT_5_02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT_3_04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT_2_05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT_4_07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT_4_05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT_5_06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT_4_09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT_5_05</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Job Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Candidate_Details__c</columns>
        <columns>Position__c</columns>
        <columns>Stage__c</columns>
        <columns>Picklist__c</columns>
        <columns>Total_Rating__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>All Job Applicants</label>
    </listViews>
    <listViews>
        <fullName>Hired_Candidates</fullName>
        <columns>NAME</columns>
        <columns>Final_Salary__c</columns>
        <columns>Candidate_Details__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Picklist__c</field>
            <operation>equals</operation>
            <value>Hired</value>
        </filters>
        <label>Hired Candidates</label>
    </listViews>
    <nameField>
        <label>Job Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Applications</pluralLabel>
    <recordTypes>
        <fullName>Hiring_ManagerRT</fullName>
        <active>true</active>
        <label>Hiring ManagerRT</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>